<resources>
    <string name="app_name">Projeto AV2 RSM</string>
    <string name="contentDescription_default">TODO</string>
    <string name="button_novo_jogo">Novo Jogo</string>
    <string name="button_sair">Sair</string>
    <string name="button_verificar">Verificar</string>
    <string name="textButton_quebra_cabeca">Quebra Cabeça</string>
    <string name="titulo_escolha_um_jogo">ESCOLHA UM JOGO</string>
    <string name="textButton_slider">Slider</string>
    <string name="sobre">Projeto desenvolvido por Ramon Moura - 201602250316 para a disciplida de Programação para Dispositivos Móveis do curso de Jogos Digitais - Estácio</string>
    <string name="textButton_menu">Menu</string>
    <string name="textButton_sobre">Sobre</string>
    <string name="textView_Ajuda">O quadro em branco deve ficar no canto inferior direito.</string>
    <string name="textView_Ajuda_QuebraCabeca">Clique e segure para arrastar a imagem.</string>
</resources>
