<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/titulo_escolha_um_jogo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_quebra_cabeca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="161dp"
        android:onClick="IrQuebraCabeca"
        android:text="@string/textButton_quebra_cabeca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="16dp"
        android:onClick="IrSlider"
        android:text="@string/textButton_slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_quebra_cabeca" />

    <Button
        android:id="@+id/button_sobre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="15dp"
        android:onClick="IrSobre"
        android:text="@string/textButton_sobre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_slider" />
</android.support.constraint.ConstraintLayout>