<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:tag="LinearLayout"
    tools:context=".View.QuebraCabecaActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:tag="RelativeLayout">

        <Button
            android:id="@+id/button_novoJogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_novo_jogo" />

        <Button
            android:id="@+id/button_Sair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:onClick="onClick"
            android:text="@string/button_sair"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView_br"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:tag="ScrollView">

        <LinearLayout
            android:id="@+id/barra_rolagem_pecas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_barra_rolagem"
            android:orientation="horizontal"
            android:tag="LinearLayout">

            <ImageView
                android:id="@+id/peca0"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/contentDescription_default"
                android:padding="8dp"
                android:src="@drawable/c1l1"
                android:tag="0" />

            <ImageView
                android:id="@+id/peca1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/contentDescription_default"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/c2l1"
                android:tag="1" />

            <ImageView
                android:id="@+id/peca2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/contentDescription_default"
                android:padding="8dp"
                android:src="@drawable/c3l1"
                android:tag="2" />

            <ImageView
                android:id="@+id/peca3"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/contentDescription_default"
                android:padding="8dp"
                android:src="@drawable/c1l2"
                android:tag="3" />

            <ImageView
                android:id="@+id/peca4"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/contentDescription_default"
                android:padding="8dp"
                android:src="@drawable/c2l2"
                android:tag="4" />

            <ImageView
                android:id="@+id/peca5"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/contentDescription_default"
                android:padding="8dp"
                android:src="@drawable/c3l2"
                android:tag="5" />

            <ImageView
                android:id="@+id/peca6"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/contentDescription_default"
                android:padding="8dp"
                android:src="@drawable/c1l3"
                android:tag="6" />

            <ImageView
                android:id="@+id/peca7"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/contentDescription_default"
                android:padding="8dp"
                android:src="@drawable/c2l3"
                android:tag="7" />

            <ImageView
                android:id="@+id/peca8"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/contentDescription_default"
                android:padding="8dp"
                android:src="@drawable/c3l3"
                android:tag="8" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="280dp"
                android:layout_height="100dp"
                android:contentDescription="@string/contentDescription_default"
                app:srcCompat="@drawable/bg_barra_rolagem" />

        </LinearLayout>

    </HorizontalScrollView>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/recipiente0"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_quebra_cabeca"
                android:orientation="vertical"
                android:tag="0">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/recipiente1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_quebra_cabeca"
                android:orientation="vertical"
                android:tag="1" />

            <LinearLayout
                android:id="@+id/recipiente2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_quebra_cabeca"
                android:orientation="vertical"
                android:tag="2" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/recipiente3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_quebra_cabeca"
                android:orientation="vertical"
                android:tag="3" />

            <LinearLayout
                android:id="@+id/recipiente4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_quebra_cabeca"
                android:orientation="vertical"
                android:tag="4" />

            <LinearLayout
                android:id="@+id/recipiente5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_quebra_cabeca"
                android:orientation="vertical"
                android:tag="5" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/recipiente6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_quebra_cabeca"
                android:orientation="vertical"
                android:tag="6" />

            <LinearLayout
                android:id="@+id/recipiente7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_quebra_cabeca"
                android:orientation="vertical"
                android:tag="7" />

            <LinearLayout
                android:id="@+id/recipiente8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_quebra_cabeca"
                android:orientation="vertical"
                android:tag="8" />
        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_Resultado"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:contentDescription="@string/contentDescription_default"
            android:src="@drawable/android_lollipop_bugdroid" />

        <Button
            android:id="@+id/button_Verificar"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="60dp"
            android:onClick="onClick"
            android:text="@string/button_verificar" />

    </RelativeLayout>

</LinearLayout>